--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html lan="ko-KR">
- <!--언어 코드: en-US or ko-ㅏㄲ -->
+ <!--언어 코드: en-US or korea -->
 <head>
  <meta charset="utf-8"
  <title>나의 첫 HTML 페이지</title>
@@ -11,9 +11,7 @@
  <meta property="og:description" content="=" 이 페이지는 디지털 노마드를 위한 페이지입니다.">
  <link href="style.css" type="text/css" rel="stylesheet">
  <style>
-   p {
-     font-size: 20px;
-    }
+   p {font-size: 20px;}
  </style> 
 
   <script>
@@ -22,49 +20,60 @@
   <script src="index.js"> </script>
 </head>
 <body>
-
-<h1>디지털노마드의 시작</h1>
-<p> 최근 디지털 노마드의 꿈을 키워가는 청년들이 많다.</p>  
-
-<p>특히 개인이 운영하는 채널을 바탕으로한 도전은 끝이 없다.</br>이를 통해 경제적 자유를 누리고 있으며 자신의 인생을 풍족하게 만든다.</p>  
-
-<h2>디지털노마드 장비 가격</h2>
-<ul> 
-<li>카메라 1 가격</li>
-<li>카메라 2 가격</li>
-<li>카메라 3 가격</li>
-<li>카메라 4 가격</li>  
-</ul>
-<ol reversed> 
-   <!-- type a는 알파벳, i는 로마자 --!>
-<li>카메라 1 가격</li>
-<li>카메라 2 가격</li>
-<li>카메라 3 가격</li>
-<li>카메라 4 가격</li>  
-</Ol>
-<ol start="14" reversed> 
-<li>카메라 1 가격</li>
-<li>카메라 2 가격</li>
-<li>카메라 3 가격</li>
-<li>카메라 4 가격</li>  
-</Ol>
-<ol start="7" type="I" reversed> 
-<li>카메라 1 가격</li>
-<li>카메라 2 가격</li>
-<li>카메라 3 가격</li>
-<li>카메라 4 가격</li>  
-</Ol>
-
+<div class="디지털노마드" =id"main-article">>
+  <h1>디지털노마드의 시작</h1>
+  <p> 최근 디지털 노마드의 꿈을 키워가는 청년들이 많다.</p>  
+  
+  <p>특히 개인이 운영하는 채널을 바탕으로한 도전은 끝이 없다.</br>이를 통해 경제적 자유를 누리고 있으며 자신의 인생을 풍족하게 만든다.</p>  
+  
+  <h2>디지털노마드 장비 가격</h2>
+  <ul> 
+  <li>카메라 1 가격</li>
+  <li>카메라 2 가격</li>
+  <li>카메라 3 가격</li>
+  <li>카메라 4 가격</li>  
+  </ul>
+  <ol reversed> 
+  <li>카메라 1 가격</li>
+  <li>카메라 2 가격</li>
+  <li>카메라 3 가격</li>
+  <li>카메라 4 가격</li>  
+  </Ol>
+  <ol start="14" reversed> 
+  <li>카메라 1 가격</li>
+  <li>카메라 2 가격</li>
+  <li>카메라 3 가격</li>
+  <li>카메라 4 가격</li>  
+  </Ol>
+  <ol start="7" type="I" reversed> 
+  <li>카메라 1 가격</li>
+  <li>카메라 2 가격</li>
+  <li>카메라 3 가격</li>
+  <li>카메라 4 가격</li>  
+  </Ol>
+</div>
+  
 <a href="https://www.google.com/"target="_blank"> Go to google</a>
 <a href="#main-title> Go to title</a>
-  
+
+
+
 <h2>입문 배경</h2>  
 <h2>디지털노마드 현황</h2>
 <h3>한국</h3>  
 <h3>세계</h3> 
+
+<picture> 
+ <source srcset="mobile.jpg" media="(min-width: 720px)">
+ <img src="namsan.jpg" width="720" alt="namsan and love">  
+</picture>
+
+
   
  <p>this is my home!!</p> 
 </body>
 
+
+  
 
 </html>
