--- a/index.html
+++ b/index.html
@@ -22,34 +22,35 @@
 <body>
 <div class="디지털노마드" =id"main-article">>
   <h1>디지털노마드의 시작</h1>
-  <p> 최근 디지털 노마드의 꿈을 키워가는 청년들이 많다.</p>  
+  <p> 최근 <span style="color:red;">디지털</span>노마드의 꿈을 키워가는 청년들이 많다.</p>  
   
   <p>특히 개인이 운영하는 채널을 바탕으로한 도전은 끝이 없다.</br>이를 통해 경제적 자유를 누리고 있으며 자신의 인생을 풍족하게 만든다.</p>  
+  <p>나는 <span style="color:blue;">디지털</span> 사회에서 살아갈것이다</p> 
   
   <h2>디지털노마드 장비 가격</h2>
   <ul> 
-  <li>카메라 1 가격</li>
-  <li>카메라 2 가격</li>
-  <li>카메라 3 가격</li>
-  <li>카메라 4 가격</li>  
+    <li>카메라 1 가격</li>
+    <li>카메라 2 가격</li>
+    <li>카메라 3 가격</li>
+    <li>카메라 4 가격</li>  
   </ul>
   <ol reversed> 
-  <li>카메라 1 가격</li>
-  <li>카메라 2 가격</li>
-  <li>카메라 3 가격</li>
-  <li>카메라 4 가격</li>  
+    <li>카메라 1 가격</li>
+    <li>카메라 2 가격</li>
+    <li>카메라 3 가격</li>
+    <li>카메라 4 가격</li>  
   </Ol>
   <ol start="14" reversed> 
-  <li>카메라 1 가격</li>
-  <li>카메라 2 가격</li>
-  <li>카메라 3 가격</li>
-  <li>카메라 4 가격</li>  
+    <li>카메라 1 가격</li>
+    <li>카메라 2 가격</li>
+    <li>카메라 3 가격</li>
+    <li>카메라 4 가격</li>  
   </Ol>
   <ol start="7" type="I" reversed> 
-  <li>카메라 1 가격</li>
-  <li>카메라 2 가격</li>
-  <li>카메라 3 가격</li>
-  <li>카메라 4 가격</li>  
+    <li>카메라 1 가격</li>
+    <li>카메라 2 가격</li>
+    <li>카메라 3 가격</li>
+    <li>카메라 4 가격</li>  
   </Ol>
 </div>
   
@@ -64,7 +65,7 @@
 <h3>세계</h3> 
 
 <picture> 
- <source srcset="mobile.jpg" media="(min-width: 720px)">
+ <source srcset="mobile.jpg" media="(min-width: 360px)">
  <img src="namsan.jpg" width="720" alt="namsan and love">  
 </picture>
 
