--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="index.js"> </script>
 </head>
 <body>
+  <a href="symantic.html"> symantic 페이지 가기</a>
 <div class="디지털노마드" =id"main-article">>
   <h1>디지털노마드의 시작</h1>
   <p> 최근 <span style="color:red;">디지털</span>노마드의 꿈을 키워가는 청년들이 많다.</p>  
